re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__nfa_to_dfa-2.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\"AB\")"
snapshot_kind: text
---
Ok(
    Dfa {
        root: ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
            1,
        ),
        nodes: Arena {
            nodes: [
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                2,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'A': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {},
                    },
                },
            ],
        },
    },
)
