re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__simplify_dfa.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\"([abc]\\\\s*)*\")"
snapshot_kind: text
---
Ok(
    Dfa {
        root: ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
            12,
        ),
        nodes: Arena {
            nodes: [
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            ' ': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\r': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\n': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            '\t': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'a': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'b': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'c': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
            ],
        },
    },
)
